testsuite/tests/backtrace/backtrace_effects.reference
(** get_callstack **)
Raised by primitive operation at file "backtrace_effects.ml", line 9, characters 13-39
Called from file "backtrace_effects.ml", line 16, characters 12-17
Called from file "backtrace_effects.ml", line 28, characters 8-14
(** get_continuation_callstack **)
Raised by primitive operation at file "backtrace_effects.ml", line 11, characters 12-13
Called from file "backtrace_effects.ml", line 16, characters 12-17
(** raise **)
Fatal error: exception Pervasives.Exit
Raised at file "backtrace_effects.ml", line 6, characters 10-14
Called from file "backtrace_effects.ml", line 28, characters 8-14
